# KooD3plotReader

./: .gitignore  BUILD.md  BUILD_AND_RUN_GUIDE.md  CMakeLists.txt  COMPREHENSIVE_YAML_GUIDE.md  DEVELOPMENT_SETUP.md  IMPLEMENTATION_ROADMAP.md  KOOD3PLOT_CLI_사용법.md  KOOD3PLOT_V3_QUICKREF.md  PENDING_FEATURES.md  PROGRESS.md  README.md  READY_TO_START.md  Real_BallDrop_ex02_Report.html  STATUS.md  Sample_MultiFaceImpact_Report.html  Test_006_SphereDrop_Report.html  USAGE.md  V2_VS_V3_COMPARISON.md  V4_SESSION_SUMMARY_20251125.md  V4_TEST_RESULTS.md  WINDOWS_BUILD_PLAN.md  build.bat  build.sh  build_and_install.sh  build_cmake.ps1  build_kood3plot.cmd  build_net.bat  build_net_simple.bat  imgui.ini  install.bat  install.sh  ls-dyna_database.txt  run_test.sh  vcpkg.json
.claude/: settings.json  settings.local.json
examples/: 01_basic_hdf5_export.cpp  02_hdf5_benchmark.cpp  CMakeLists.txt  advanced_analysis.cpp  benchmark_parallel.cpp  check_results.cpp  comprehensive_example.cpp  extract_all_data.cpp  extract_displacement.cpp  extract_stress.cpp  find_states.cpp  full_extraction_example.cpp  max_displacement_history.cpp  render_config_example.json  render_config_example.yaml  section_view_example.cpp  show_narbs.cpp  show_stress_strain.cpp  simple_read.cpp  streaming_example.cpp  test_base_file_only.cpp  test_binary_reader.cpp  test_cache.cpp  test_control_data.cpp  test_debug.cpp  test_debug_states.cpp  test_family_file.cpp  test_fringe_types.cpp  test_geometry.cpp  test_part_analyzer.cpp  test_precision.cpp  test_raw_dump.cpp  test_raw_read.cpp  test_state_data.cpp  test_strain_extraction.cpp  test_strain_parallel.cpp  test_strain_simple.cpp  unified_analyzer.cpp
examples/config_examples/: 01_stress_only.yaml  02_strain_only.yaml  03_motion_analysis.yaml  04_surface_stress.yaml  05_surface_strain.yaml  06_comprehensive_analysis.yaml  07_section_views.yaml  08_multi_fringe.yaml  09_full_workflow.yaml  10_drop_test.yaml  README.md
examples/converter/: 01_basic_conversion.cpp  02_roundtrip_test.cpp  03_real_d3plot_to_vtk.cpp  04_d3plot_roundtrip.cpp  05_radioss_to_vtk.cpp  06_full_roundtrip.cpp  07_radioss_to_d3plot.cpp
examples/v3_query/: 01_basic_query.cpp  02_integration_test.cpp  03_phase3_test.cpp  04_template_test.cpp  05_comprehensive_example.cpp  README.md
examples/v4_render/: 01_basic_config_usage.cpp  01_basic_render.cpp  02_section_view.cpp  03_animation.cpp  04_custom_views.cpp  05_batch_with_config.cpp  06_advanced_multisection.cpp  07_auto_sections.cpp  08_multirun_comparison.cpp  CMakeLists.txt
examples/writer/: 01_roundtrip_test.cpp  02_basic_write.cpp
python/koo_deep_report/: build.sh  entry_point.py  koo_deep_report.spec  koo_deep_report_cli.spec  pyproject.toml
python/koo_deep_report/docs/: PLAN.md
python/koo_deep_report/examples/: config_basic.yaml  config_full.yaml
python/koo_deep_report/examples/section_view/: 01_per_part_all.yaml  02_target_ids.yaml  03_target_patterns.yaml  04_overview_only.yaml  05_software_backend.yaml  06_disabled.yaml  README.md
python/koo_deep_report/koo_deep_report/: __main__.py
python/koo_deep_report/koo_deep_report/core/: d3plot_reader.py  keyword_parser.py  sim_detector.py
python/koo_deep_report/koo_deep_report/gui/: __init__.py  __main__.py  app.py
python/koo_deep_report/koo_deep_report/render/: job_builder.py
python/koo_deep_report/koo_deep_report/report/: batch_report.py  html_report.py  models.py
python/koo_deep_report/single_report/: analysis_result.json  result.json
python/koo_impact_report/: .gitignore  README.md  pyproject.toml
python/koo_impact_report/examples/: README.md
python/koo_impact_report/koo_impact_report/: __init__.py  __main__.py  analyzer.py  energy_flow.py  loader.py  models.py  solver_quality.py
python/koo_impact_report/koo_impact_report/report/: html_report.py  json_report.py  terminal.py
python/koo_impact_report/tests/: demo_d3plot.py  demo_doe.py  generate_sample.py  test_models.py  test_sample_data.py
python/single_analyzer/: entry_point.py  pyproject.toml  single_analyzer.spec
python/single_analyzer/examples/: config_basic.yaml  config_full.yaml
python/single_analyzer/single_analyzer/: __main__.py
python/single_analyzer/single_analyzer/core/: binout_reader.py  d3plot_reader.py  glstat_reader.py
python/single_analyzer/single_analyzer/gui/: __init__.py  __main__.py  app.py
python/single_analyzer/single_analyzer/render/: job_builder.py
python/single_analyzer/single_analyzer/report/: batch_report.py  html_report.py  models.py
tests/: CMakeLists.txt  test_analysis_result  test_analysis_result.cpp  test_surface_extractor.cpp  test_surface_stress.cpp  test_time_history.cpp  test_vector_math  test_vector_math.cpp
tests/hdf5/: test_hdf5_writer.cpp  test_quantization.cpp
viewer/: CMakeLists.txt
viewer/src/: main.cpp
viewer/src/app/: App.cpp  App.hpp  DeepReportApp.cpp  DeepReportApp.hpp  DeepReportColors.hpp  DeepReportHelpOverlay.cpp  DeepReportTab3D.cpp  DeepReportTabContact.cpp  DeepReportTabDeepDive.cpp  DeepReportTabEnergy.cpp  DeepReportTabMotion.cpp  DeepReportTabOverview.cpp  DeepReportTabQuality.cpp  DeepReportTabRenders.cpp  DeepReportTabStress.cpp  DeepReportTabSysInfo.cpp  DeepReportTabTensor.cpp  SessionState.hpp  SphereReportAngleDetail.cpp  SphereReportApp.cpp  SphereReportApp.hpp  SphereReportExportHTML.cpp  SphereReportHelpOverlay.cpp  SphereReportOrientation.cpp  SphereReportTabAngleTable.cpp  SphereReportTabCompare.cpp  SphereReportTabCompareAB.cpp  SphereReportTabDirectional.cpp  SphereReportTabFailure.cpp  SphereReportTabFindings.cpp  SphereReportTabGlobe.cpp  SphereReportTabHeatmap.cpp  SphereReportTabMollweide.cpp  SphereReportTabPartRisk.cpp  SphereReportTabStatistics.cpp
viewer/src/data/: ReportData.cpp  ReportData.hpp  SimData.cpp  SimData.hpp  SphereData.cpp  SphereData.hpp  StlLoader.cpp  StlLoader.hpp
viewer/src/gpu/: MeshGPU.cpp  MeshGPU.hpp  Shader.cpp  Shader.hpp
viewer/src/gpu/shaders/: mesh.frag  mesh.vert
viewer/src/scene/: Camera.cpp  Camera.hpp
viewer/src/widgets/: VideoPlayer.cpp  VideoPlayer.hpp
(+289 files in other folders)
