[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koo_impact_report"
version = "0.1.0"
description = "Multi-face drop-weight impact (DWI) DOE analysis report generator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "KooD3plotReader" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "rich>=13.0",
]

[project.optional-dependencies]
lhs = ["scipy>=1.10"]

[project.scripts]
koo_impact_report = "koo_impact_report.__main__:main"

[tool.setuptools.packages.find]
include = ["koo_impact_report*"]
exclude = ["tests*", "examples*"]
