[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "single_analyzer"
version = "0.1.0"
description = "Deep single-simulation analysis and HTML report for LS-DYNA"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
single_analyzer = "single_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
